# ClspvTest

./: .gitignore  .gitmodules  README.md  build.gradle
Results/: Results.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test_manifest.txt
app/src/main/assets/clspv_tests/: Fills.spv  Fills.spvmap  Memory.spv  Memory.spvmap  localsize.spv  localsize.spvmap
app/src/main/assets/shaders/: GL_Fills_reduced.spv
app/src/main/cpp/: CMakeLists.txt  clspv_test.cpp  clspv_utils.cpp  clspv_utils.hpp  copybuffertoimage_kernel.cpp  copybuffertoimage_kernel.hpp  copyimagetobuffer_kernel.cpp  copyimagetobuffer_kernel.hpp  crlf_savvy.cpp  crlf_savvy.hpp  file_utils.cpp  file_utils.hpp  fill_kernel.cpp  fill_kernel.hpp  fillarraystruct_kernel.cpp  fillarraystruct_kernel.hpp  fp_utils.hpp  getline_crlf_savvy.cpp  getline_crlf_savvy.hpp  gpu_types.cpp  gpu_types.hpp  half.hpp  main.cpp  memmove_test.cpp  memmove_test.hpp  opencl_types.hpp  pixels.hpp  readconstantdata_kernel.cpp  readconstantdata_kernel.hpp  readlocalsize_kernel.cpp  readlocalsize_kernel.hpp  resample2dimage_kernel.cpp  resample2dimage_kernel.hpp  resample3dimage_kernel.cpp  resample3dimage_kernel.hpp  strangeshuffle_kernel.cpp  strangeshuffle_kernel.hpp  test_manifest.cpp  test_manifest.hpp  test_result_logging.cpp  (+11 more)
app/src/main/cpp/clspv_utils/: arg_spec.hpp  clspv_utils.hpp  clspv_utils_fwd.hpp  clspv_utils_interop.cpp  clspv_utils_interop.hpp  device.cpp  device.hpp  file_utils.cpp  file_utils.hpp  getline_crlf_savvy.hpp  interface.cpp  interface.hpp  invocation.cpp  invocation.hpp  invocation_req.hpp  kernel.cpp  kernel.hpp  kernel_interface.cpp  kernel_interface.hpp  kernel_invocation.cpp  kernel_invocation.hpp  kernel_layout.hpp  kernel_module.cpp  kernel_module.hpp  kernel_req.hpp  module.cpp  module.hpp  module_interface.cpp  module_interface.hpp  module_proxy.hpp  opencl_types.hpp  sampler_spec.cpp  sampler_spec.hpp
app/src/main/cpp/kernel_tests/: alpha_gain_kernel.cpp  alpha_gain_kernel.hpp  copybuffertobuffer_kernel.cpp  copybuffertobuffer_kernel.hpp  copybuffertoimage_kernel.cpp  copybuffertoimage_kernel.hpp  copyimagetobuffer_kernel.cpp  copyimagetobuffer_kernel.hpp  fill_kernel.cpp  fill_kernel.hpp  fillarraystruct_kernel.cpp  fillarraystruct_kernel.hpp  generic_kernel.cpp  generic_kernel.hpp  readconstantdata_kernel.cpp  readconstantdata_kernel.hpp  readlocalsize_kernel.cpp  readlocalsize_kernel.hpp  resample2dimage_kernel.cpp  resample2dimage_kernel.hpp  resample3dimage_kernel.cpp  resample3dimage_kernel.hpp  strangeshuffle_kernel.cpp  strangeshuffle_kernel.hpp  testgreaterthanorequalto_kernel.cpp  testgreaterthanorequalto_kernel.hpp
app/src/main/cpp/vulkan_utils/: vulkan_utils.cpp  vulkan_utils.hpp
app/src/main/kernels/: AlphaGain.cl  Fills.cl  GL_AlphaGain.comp  GL_AlphaGain.spvmap  GL_Fills_reduced.comp  GL_Fills_reduced.spvmap  GL_LocalMemory.comp  GL_LocalMemory.spvmap  LocalMemory.cl  Memory.cl  ReadConstantData.cl  StructArrays.cl  TestComparisons.cl  localsize.cl  sampler_map  spirv-opt-inline.config
app/src/main/scripts/: boost_init.sh
app/src/main/vulkan/: vulkan.hpp
gradle/wrapper/: gradle-wrapper.properties
